# GenAI-Book-Assistant

./: .env.example  .gitignore  HANDOFF_multitenancy.md  README.md  current_state.md  main.py  pyproject.toml  requirements.txt  retrieval_quality_research.md
app/: auth.py  config.py  database.py
app/api/: auth_routes.py  chat_routes.py  comparison_routes.py  conversational_routes.py  documents_routes.py
app/schemas/: chat.py  documents.py
app/services/: advanced_document_loaders.py  conversational_memory.py  document_manager.py  enhanced_rag_service.py  langchain_rag_service.py  llm_chapter_detector.py  reranker.py  vector_store_manager.py
fantasy-sci-fi-ai-assistant/: .gitignore  main.py  requirements.txt
fantasy-sci-fi-ai-assistant/app/: config.py  crud.py  database.py  documents.py  lore_schemas.py  prompt_schemas.py
fantasy-sci-fi-ai-assistant/app/api/: documents.py  documents_routes.py  lore.py
fantasy-sci-fi-ai-assistant/app/schemas/: chat.py
fantasy-sci-fi-ai-assistant/app/services/: lore_service.py  rag_service.py
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: add_complex_document.py  conftest.py  test_auth.py  test_chapter_extraction.py  test_chapter_extraction_llm.py  test_comparison.py  test_config_validation.py  test_conversation_ownership.py  test_conversational.py  test_database_defaults.py  test_ingest_chapter_detection.py  test_input_bounds.py  test_reading_partner.py  test_retrieval_e2e.py  test_retrieval_recall.py  test_retrieval_trace.py  test_score_normalization.py  test_should_rebuild.py  test_spoiler_filter.py  test_user_filter.py  test_user_scoping.py
tests/eval/: build_dune_fixture.py  chapter_metrics.py  dune_qa.jsonl  run_chapter_eval.py  run_eval.py
tests/eval/results/: baseline.json  chapter_hybrid.json  chapter_llm.json  chapter_regex.json  with_reranker.json
tests/fixtures/: chapter_ground_truth.py  retrieval_corpus.py
