[project]
name = "ms-final-proj"
version = "0.1.0"
description = "RAG Reading Partner for Sci-Fi/Fantasy Literature"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.74.1",
    "beautifulsoup4>=4.12.0",      # For EPUB HTML parsing
    "claude>=0.4.11",
    "ebooklib>=0.18",               # For EPUB reading
    "faiss-cpu==1.8.0",
    "fastapi==0.104.1",
    "google-generativeai>=0.5.4",
    "jinja2==3.1.2",
    "langchain>=0.1.20",
    "langchain-anthropic>=0.1.13",
    "langchain-community>=0.0.38",
    "langchain-core>=0.1.53",
    "langchain-google-genai>=1.0.4",
    "langchain-openai>=0.1.6",
    "lxml>=4.9.0",                  # For ebooklib XML parsing
    "numpy==1.26.2",
    "openai>=1.109.1",
    "pydantic==2.5.0",
    "pypdf==3.17.4",
    "pyrefly>=0.42.2",
    "python-docx==1.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.19",
    "sentence-transformers==2.7.0",
    "sqlalchemy==2.0.23",
    "tiktoken==0.5.2",
    "unstructured==0.11.0",
    "uvicorn[standard]==0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
