[project]
name = "ms-final-proj"
version = "0.1.0"
description = "RAG Reading Partner for Sci-Fi/Fantasy Literature"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.74.1",
    "authlib>=1.3.0",               # Google OAuth (Increment 2)
    "beautifulsoup4>=4.12.0",      # For EPUB HTML parsing
    "ebooklib>=0.18",               # For EPUB reading
    "faiss-cpu==1.8.0",
    "fastapi==0.104.1",
    # httpx is a runtime dep of authlib's OAuth client. Pinned <0.28 because
    # starlette 0.27's TestClient passes app= to httpx.Client, which 0.28 removed
    # (bumping starlette/fastapi instead would ripple through the langchain pins).
    "httpx>=0.27,<0.28",
    "itsdangerous>=2.1.0",          # Signed-cookie session (SessionMiddleware)
    "google-generativeai>=0.5.4",
    "jinja2==3.1.2",
    "langchain>=0.1.20",
    "langchain-anthropic>=0.1.13",
    "langchain-community>=0.0.38",
    "langchain-core>=0.1.53",
    "langchain-google-genai>=1.0.4",
    "langchain-openai>=0.1.6",
    "lxml>=4.9.0",                  # For ebooklib XML parsing
    "numpy==1.26.2",
    "openai>=1.109.1",
    "pydantic==2.5.0",
    "pypdf==3.17.4",
    "python-docx==1.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.19",
    "sentence-transformers==2.7.0",
    "sqlalchemy==2.0.23",
    "tiktoken==0.5.2",
    "unstructured==0.11.0",
    "uvicorn[standard]==0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "retrieval: builds a real FAISS index (loads the local embedding model); offline but slower than the unit suite. Skip with -m 'not retrieval'.",
    "eval: heavier eval-harness wrappers (may need a book file or API keys).",
    "e2e: exercises the app end-to-end.",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<0.28",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
